2010-08-17  Satoshi Konno <skonno@cybergarage.org>
	* Changed some source codes to compile normally using Visual Studio 2008.
	* Added some project files for Visual Studio 2008.
	* Changed CGUpnpAvServer:browse:browseFlag:withRequestedCount to support WAC7500 based on TwonkyMedia UPnP SDK/1.1.
	
2010-07-31 Roman Shterenzon <romanbsd@yahoo.com>
	* Fixed autoconf warnings
	* Don't append the original query to path when it already has a query (fixes WMP11/12 access)
	* Fixed several memory leaks in Objective-C wrapper
	* Proper handling of edge cases in src/cybergarage/upnp/cservice.c and
	  std/av/src/cybergarage/upnp/std/av/cprotocolinfo.c
	* Fix crashes caused by attempts to initialize NSString with NULL cstring
	* Added modelNumber and modelName methods to CGUpnpDevice class

2010-06-28 Christian Zuckschwerdt <Christian@Zuckschwerdt.org>
	* Fixed CGUpnpAction::arguments() not to release temporary object.
	
2010-06-24  Satoshi Konno <skonno@cybergarage.org>
	* Added cg_xml_node_print().

2010-03-17  Satoshi Konno <skonno@cybergarage.org>
	* Added cg_upnp_service_createnotifyallthread().
	* Changed cg_upnp_device_newsubscriptionrecieved() to delay the notify message instead of cg_upnp_service_notifyall().
	* Changed cg_upnp_event_notify_request_setpropertysetnode() to add a connection header.
	* Changed cg_http_getservername() to use uname() on iPhone platform.

2010-02-09  Satoshi Konno <skonno@cybergarage.org>
	* Added project files for Visual Studio 2008.
	* Disabled AC_PROG_LIBTOOL and HAVE_LIBTOOL in confugre.in and Makefile.am.
	* Disabled libxml2 and libcurl as default in confugre.in.
	* Added support for SO_NOSIGPIPES in configure.in.
	* Fixed some errors to compile normally on Ubuntu 9.10.
	* Changed CG_USE_WIN32_GETHOSTADDRESSES flag as default for Windows platform.
	* Fixed cg_upnp_device_unsubscriptionrecieved() to unscribe normally.
	* Fixed cg_upnp_device_ssdpmessagereceived() not to ignore IPv6 multicast.