@@ -1,3 +1,7 @@
+2010-08-17  Ariel Yaloz <arielyz@hotmail.com>
+	* Added support for getting the list of allowable values for a state variable
+	* Added a method for checking whether a state variable is implemented
+
 2010-08-17  Satoshi Konno <skonno@cybergarage.org>
 	* Changed some source codes to compile normally using Visual Studio 2008.
 	* Added some project files for Visual Studio 2008.
